# fastapi_coffe_chat

./: .env  alembic.ini  pyproject.toml
app/: database.py  main.py
app/domain/: models.py
app/domain/account/: account_router.py  dependencies.py  exceptions.py  models.py  schema.py
app/domain/calendar/: calendar_router.py  exceptions.py  models.py  schema.py
app/domain/core/: settings.py  utils.py
app/libs/datetime/: calendar.py
migrations/: env.py
migrations/versions/: 4e7a150813a3_user_added_password_column.py  5341675c43b6_calendar_colum_fix_topic_topics.py  5661c2d80291_user_model_fix.py  8b2c3acfadfd_auto_generate_migration.py
tests/: conftest.py
tests/domain/account/: test_router.py  test_signup.py  test_signup_api.py  test_update_user_api.py
tests/domain/calendar/: test_calendar.py
tests/libs/datetime/: test_calendar.py
